Remove old code

--- a/mousecircle.html
+++ b/mousecircle.html
@@ -13,7 +13,6 @@
     <script type="module">
 import { createWasmSDLHost } from './js/sdl_wasm_host.js';
 import { createFetchingVirtualFileSystem } from './js/virtual_fs.js';
-import { createPrefetchHost } from './js/prefetch_host.js';
 import { fetchBundle } from './js/bundle_loader.js';
 
 let wasmMemory = null;
@@ -32,9 +31,8 @@ const stdoutDecoder = new TextDecoder();
             const adapter = await navigator.gpu.requestAdapter();
             const device = await adapter.requestDevice();
 
-            // Create virtual filesystem and prefetch manager
+            // Create virtual filesystem
             const wasiFs = createFetchingVirtualFileSystem();
-            const prefetchHost = createPrefetchHost(wasiFs);
 
             // Load shader bundle for instant filesystem access
             try {
@@ -93,45 +91,23 @@ const stdoutDecoder = new TextDecoder();
             const wasmModule = await WebAssembly.instantiate(wasmBytes, {
                 sdl: sdlHost.imports,
                 wasi_snapshot_preview1: wasiImports,
-                app_host: prefetchHost.imports,
             });
 
             const wasmInstance = wasmModule.instance;
             wasmMemory = wasmInstance.exports.memory;
             sdlHost.setMemory(wasmMemory);
             wasiFs.setMemory(wasmMemory);
-            prefetchHost.setMemory(wasmMemory);
 
             // Call main
             const app_init = wasmInstance.exports.app_init;
             const app_iterate = wasmInstance.exports.app_iterate;
             const app_quit = wasmInstance.exports.app_quit;
-            const app_on_prefetch_ready = wasmInstance.exports.app_on_prefetch_ready;
 
             console.log('app_init()');
             const initResult = app_init();
             if (initResult < 0) {
                 console.error('app_init() failed');
                 return;
-            }
-
-            if (prefetchHost.hasPendingPrefetch()) {
-                try {
-                    await prefetchHost.waitForPrefetch();
-                } catch (err) {
-                    console.error('[Prefetch] Failed:', err);
-                    app_quit();
-                    return;
-                }
-
-                if (typeof app_on_prefetch_ready === 'function') {
-                    const prefetchResult = app_on_prefetch_ready();
-                    if (prefetchResult < 0) {
-                        console.error('app_on_prefetch_ready() failed');
-                        app_quit();
-                        return;
-                    }
-                }
             }
 
             if (initResult > 0) {
